# dsegen

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
dsegen/: __init__.py  cli.py  core.py  server.py
dsegen/data/: prompt.md
dsegen/data/examples/: night-owls.md
dsegen/data/templates/: template.html
dsegen/utils/: files.py
examples/: unmanned-store.md
templates/: style.css  template.html
tf/: main.tf
