[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dsegen"
version = "0.1.0"
description = "DSE Generator - Generate DSE practice papers with AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.6",
    "markdown>=3.7",
    "openai>=1.66.2",
    "playwright>=1.41.2",
    "python-dotenv>=1.0.0",
    "keyring>=24.0.0"
]

[project.scripts]
dsegen = "dsegen.cli:main"

[tool.setuptools]
packages = ["dsegen"]

[tool.setuptools.package-data]
dsegen = [
    "data/*.md",
    "data/examples/*.md",
    "data/templates/*.html",
    "data/templates/*.png"
]

[tool.black]
line-length = 100
